--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Ứng dụng quản lý danh bạ sử dụng công nghệ Node, Express và MongoDB.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Nguyen Trung Tin",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
